remove code smells
remove code smells